--- a/public/entries/harshar_identriesaggregations_-_get_-_success.html
+++ b/public/entries/harshar_identriesaggregations_-_get_-_success.html
@@ -115,7 +115,77 @@ table th, table td {
             Allows you to sum and average values across numerical columns
           </p>
 
+          <h3>Parameters</h3>
+          <table class="parameters table table-striped table-bordered table-condensed">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                    <span class="name">column_name</span>
+                </td>
+                <td>
+                  <span class="description">Columns to perform the aggregation on (Must be one of time, response_content_size, timings_blocked, timings_dns, timings_ssl, timings_connect, timings_send, timings_wait, timings_receive)</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <span class="name">limit</span>
+                </td>
+                <td>
+                  <span class="description">Limit</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <span class="name">offset</span>
+                </td>
+                <td>
+                  <span class="description">Offset</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <span class="name">operation</span>
+                </td>
+                <td>
+                  <span class="description">Operation (Must be one of &#39;sum&#39; or &#39;average&#39;)</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                    <span class="name">url</span>
+                </td>
+                <td>
+                  <span class="description">URL or fragment to search on</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
 
+          <h3>Response Fields</h3>
+          <table class="response-fields table table-striped table-bordered table-condensed">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                    <span class="name">value</span>
+                </td>
+                <td>
+                  <span class="description">Value</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
 
           <h3>Request</h3>
 
@@ -126,7 +196,7 @@ Host: example.org
 Cookie: </pre>
 
           <h4>Route</h4>
-          <pre class="request route highlight">GET /hars/32/entries/aggregations?operation=sum&amp;column_name=timings_dns</pre>
+          <pre class="request route highlight">GET /hars/71/entries/aggregations?operation=sum&amp;column_name=timings_dns</pre>
 
             <h4>Query Parameters</h4>
             <pre class="request query_parameters highlight">operation: sum
@@ -134,7 +204,7 @@ column_name: timings_dns</pre>
 
 
             <h4>cURL</h4>
-            <pre class="request curl">curl -g &quot;http://localhost:3000/hars/32/entries/aggregations?operation=sum&amp;column_name=timings_dns&quot; -X GET \
+            <pre class="request curl">curl -g &quot;http://localhost:3000/hars/71/entries/aggregations?operation=sum&amp;column_name=timings_dns&quot; -X GET \
 	-H &quot;Accept: application/json&quot; \
 	-H &quot;Content-Type: application/json&quot; \
 	-H &quot;Host: example.org&quot; \
@@ -145,8 +215,8 @@ column_name: timings_dns</pre>
               <pre class="response headers">Content-Type: application/json; charset=utf-8
 ETag: W/&quot;901a8ef7cde002848732b1b0ab0251c7&quot;
 Cache-Control: max-age=0, private, must-revalidate
-X-Request-Id: b871da30-c5bd-481c-8dfc-eda9464585c6
-X-Runtime: 0.006127
+X-Request-Id: 7154c801-bff0-4a63-af63-d240b2bcecb8
+X-Runtime: 0.019096
 Content-Length: 15</pre>
             <h4>Status</h4>
             <pre class="response status">200 OK</pre>
